# KBE_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
GUI_tests/first-app/: .gitignore  Dockerfile  MANIFEST.in  README.md  build_backend.py  main.py  pyproject.toml  requirements.txt
GUI_tests/first-app/src/model/: model.py
GUI_tests/first-app/src/ui/: app.py
Subsystem_Library/: COMM.yaml  EPS.yaml  OBC.yaml  OBCs.yaml
sentinel2_example/: sentinel2_example_paseos.py
src/: classes.dot  classes.xml  main.py  packages.dot  test.py  test2.py
src/cubesat_configurator/: __init__.py  abstract_classes.py  concrete_classes.py  constants.py  cubesat.py  custom_validators.py  groundstation.py  main.py  mission.py  orbit.py  paseos_parser.py  report_generator.py  structure.py  subsystem.py  subsystems.py  thermal_helpers.py
src/cubesat_configurator/STEP_files/: 1U.step  1U_corrected.step
src/cubesat_configurator/concrete_classes/: high_level.py  subsystems.py
src/cubesat_configurator/data/: ADCS.csv  Battery.csv  Communication_subsystem.csv  OBC.csv  Solar_Panel.csv  Structure.csv  ground_stations.csv
src/cubesat_configurator/data/original_excel/: GroundStations.xlsx  coatings_NASA_solarcells.xlsx  coatings_SMAD.xlsx  coatings_SMAD_no_dupl.xlsx
src/cubesat_configurator/data/thermal_coatings/: coatings_NASA_solarcells.csv  coatings_SMAD_no_dupl.csv
src/cubesat_configurator/report/: CubeSat_Configurator_Report.docx  Report_Template.docx
